--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,14 +7,14 @@ external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-3.16MB/s(Youtube:不良林), server: 204.124.182.134, port: 10620, type: vmess, uuid: 4361d49a-6cb1-41c4-85d5-2a29069ffa46, alterId: 8, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.44MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 520faa7a-e763-457d-ab9a-de4b6607df77, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
   - {name: 🇨🇳 中国-476.5KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.24MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇨🇳 中国-924.4KB/s(Youtube:不良林), server: 120.233.7.221, port: 32004, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.08MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-489.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-530.9KB/s(Youtube:不良林), server: 120.233.7.221, port: 18003, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇳🇱 荷兰-3.84MB/s(Youtube:不良林), server: 104.245.99.172, port: 10620, type: vmess, uuid: 4361d49a-6cb1-41c4-85d5-2a29069ffa46, alterId: 8, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-387.9KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-374.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-378.4KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -23,14 +23,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -38,14 +38,14 @@ proxy-groups:
     proxies:
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -54,20 +54,19 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -76,14 +75,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -91,14 +90,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -107,14 +106,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,14 +131,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-374.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-378.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
