--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1011.7KB/s(Youtube:不良林), server: 120.233.7.221, port: 18003, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-983.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.08MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇩🇪 德国-1.71MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.79MB/s(Youtube:不良林), server: 42.3.19.58, port: 39999, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.09MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1011.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-983.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
